# talks

intro-vision-models-capabilities/: 01-understanding-modalities.ipynb  02-understanding-images-further.ipynb  03-connecting-text-and-images.ipynb  04-understanding-video.ipynb  05-zero-shot-video.ipynb  pyproject.toml  understanding-images-further.ipynb  understanding-video.ipynb  zero-shot-video.ipynb
intro-vision-models-capabilities/.ipynb_checkpoints/: connecting-text-and-images-checkpoint.ipynb
intro-vision-models-capabilities/assets/.ipynb_checkpoints/: 0002-understanding-images-further-checkpoint.ipynb
