[project]
name = "intro-vision-models-capabilities"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.4.0",
    "google-genai>=1.16.1",
    "hf-xet>=1.1.2",
    "huggingface-hub>=0.31.4",
    "ipython>=9.2.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.2",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "scikit-learn>=1.6.1",
    "supervision>=0.25.1",
    "torch>=2.7.0",
    "transformers>=4.52.3",
    "ultralytics>=8.3.143",
]
